# VisionIQ

./: .gitignore  add.py  api.py  config.py  faster_rcnn.ipynb  pyproject.toml  readme.md  requirements.txt
data/: fam1.HEIC  fam2.HEIC
fast_api/: api.py
model/: deploy.py  faster_rcnn.py
notebooks/: faster_rcnn.ipynb
src/: config.py  detections.py  faster_rcnn.py  fasterrcnn_detections.py  image_utils.py  main.py  model_loader.py  video_utils.py  yolo_detections.py
src/count/: fasterrcnn_detections.py  routes.py  yolo_detections.py
src/data/: image_utils.py  video_utils.py
src/model/: config.py  fasterrcnn_detections.py  model_loader.py  yolo_detections.py
src/model_setup/: __init__.py  fasterrcnn_detections.py  model_loader.py
src/utils/: image_utils.py
tests/: main.py
