[tool.poetry]
name = "visioniq"
version = "0.1.0"
description = "Advanced Crowd Monitoring System with Wellness Detection." 
authors = ["Testimony Adekoya"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
torch = "^2.4.1"
torchvision = "^0.19.1"
opencv-contrib-python = "^4.10.0.84"
numpy = "^2.1.1"
transformers = "^4.45.1"
tokenizers = "^0.20.0"
yolov5 = "^7.0.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
